// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assemble changes runs 1`] = `
Object {
  "changes": Array [
    Object {
      "releases": Object {
        "assemble1": "patch",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
    },
    Object {
      "releases": Object {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
    },
    Object {
      "releases": Object {
        "assemble1": "patch",
        "assemble2": "major",
      },
      "summary": "This is a test.",
    },
    Object {
      "releases": Object {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test.",
    },
  ],
  "releases": Object {
    "@namespaced/assemble2": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "patch",
    },
    "assemble1": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "minor",
    },
    "assemble2": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "major",
    },
  },
}
`;

exports[`merge config test merges publish 1`] = `
Array [
  Object {
    "path": "./packages/namespaced-assemble2",
    "pkg": "@namespaced/assemble2",
    "publish": "cargo publish",
  },
  Object {
    "path": "./packages/assemble1",
    "pkg": "assemble1",
    "publish": "npm publish",
  },
  null,
]
`;

exports[`merge config test merges version 1`] = `
Array [
  Object {
    "path": "./packages/namespaced-assemble2",
    "pkg": "@namespaced/assemble2",
    "version": "cargo version patch",
  },
  Object {
    "path": "./packages/assemble1",
    "pkg": "assemble1",
    "version": "lerna version minor --no-git-tag-version --no-push",
  },
  Object {
    "path": "./packages/assemble2",
    "pkg": "assemble2",
    "version": "lerna version major",
  },
]
`;
